// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicenceSignIn renders if url is defined 1`] = `
<div class="ncf__center">
  <p>
    Have you already joined the  account?
  </p>
  <div>
    <a href="https://mytest.com"
       class="ncf__button--secondary mid-width-button"
    >
      Sign in
    </a>
  </div>
</div>
`;

exports[`LicenceSignIn renders with custom display name 1`] = `
<div class="ncf__center">
  <p>
    Have you already joined the
    <span class="bold-licence-text">
      displayName
    </span>
    account?
  </p>
</div>
`;

exports[`LicenceSignIn renders with default props 1`] = `
<div class="ncf__center">
  <p>
    Have you already joined the  account?
  </p>
</div>
`;
